[package]
name = "api-naroden-org"
version = "0.0.26"
readme = "README.md"
edition = "2021"

[dependencies]
poem = { version = "3.1.1", features = ["requestid"] }
poem-openapi = { version = "5.1.2", features = ["swagger-ui"] }
poem-grants = "3.0.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
surrealdb = { version = "2.1.2", features = ["protocol-http"] }
argon2 = "0.5.3"
envconfig = "0.10.0"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
strum_macros = "0.26.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
codegen-units = 1