[package]
name = "api-naroden-org"
version = "0.1.0"
readme = "README.md"
edition = "2021"

[dependencies]
# web framework
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.6"
teloxide = { version = "0.13", features = ["macros"] }

serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
surrealdb = { version = "2.1.2", features = ["protocol-http"] }
argon2 = "0.5.3"
envconfig = "0.10.0"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
strum_macros = "0.26.4"
async-trait = "0.1"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
codegen-units = 1