[package]
name = "api-naroden-org"
version = "0.1.6"
readme = "README.md"
edition = "2021"

[dependencies]
# web framework
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7"
teloxide = { version = "0.13", features = ["macros"] }

serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
surrealdb = { version = "2.1.2", features = ["protocol-http"] }
argon2 = "0.5.3"
envconfig = "0.10.0"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
strum_macros = "0.26.4"
async-trait = "0.1"
tower-http = { version = "0.6.2", features = ["cors", "trace", "propagate-header", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
codegen-units = 1
